--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.audio.ticket"
+    package="com.ticket.media"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -33,16 +33,17 @@
         </activity>
         <activity
             android:name=".NewTicketActivity"
-            android:label="@string/app_name" >
+            android:label="@string/title_activity_new_audio_ticket" >
         </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
         <activity
-            android:name=".NewTicket"
-            android:label="@string/title_activity_new_ticket" >
+            android:name=".NewMediaTicketActivity"
+            android:label="@string/title_activity_new_medida_ticket" >
         </activity>
+
     </application>
 
 </manifest>
